--- a/war/index.html
+++ b/war/index.html
@@ -1,27 +1,41 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!-- The HTML 4.01 Transitional DOCTYPE declaration-->
-<!-- above set at the top of the file will set     -->
-<!-- the browser's rendering engine into           -->
-<!-- "Quirks Mode". Replacing this declaration     -->
-<!-- with a "Standards Mode" doctype is supported, -->
-<!-- but may lead to some differences in layout.   -->
-
+<!doctype html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
-  </head>
+    <meta charset="utf-8">
+    <title>Visualising Benefits</title>
+    <style type="text/css">
+      .center {
+      margin:auto;
+      width:50%;
+      text-align:center;
+      }
 
+      div.showCard {
+      border-width:5px;
+      border-style:solid;
+      border-color:black;
+      text-align:center;
+      display:none;
+      }
+    </style>
+  </head>
   <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="visualbenefits">VisualBenefits</a></td>
-      </tr>
-    </table>
+    <script src="jquery-1.5.1.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <section>
+      <div class="center">Visualising Benefits</div>
+    </section>
+    <section>
+      <div class="center">
+	<form id="cardEntryForm">
+	  Description:<input id="cardDescription" /> Value:<input id="benefitValue" /> <button id="enterButton" type="submit">Enter</button>
+	</form>
+      </div>
+    </section>
+    <section>
+      <div id="cardWall">
+	<div id="card" />
+      </div>
+    </section>
   </body>
 </html>
