Moved js and css files into their only directories.

--- a/war/index.html
+++ b/war/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Visualising Benefits</title>
-    <link rel="stylesheet" type="text/css" href="VisualBenefits.css" />
-    <script src="jquery-1.5.1.js"></script>
-    <script type="text/javascript" src="VisualBenefits.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/VisualBenefits.css" />
+    <script src="lib/jquery-1.5.1.js"></script>
+    <script type="text/javascript" src="js/VisualBenefits.js"></script>
   </head>
   <body>
     <section>
