--- a/tests/html/VisualBenefitsTests.html
+++ b/tests/html/VisualBenefitsTests.html
@@ -3,8 +3,8 @@
 <head>
   <link rel="stylesheet" href="../lib/qunit/qunit.css" type="text/css" media="screen" />
 
-  <script src="../../war/jquery-1.5.1.js"></script>
-  <script src="../../war/VisualBenefits.js"></script>  
+  <script src="../../war/lib/jquery-1.5.1.js"></script>
+  <script src="../../war/js/VisualBenefits.js"></script>  
   
   <script type="text/javascript" src="../lib/qunit/qunit.js"></script>
   <script type="text/javascript" src="../js/VisualBenefitsTests.js"></script>  
