Initial attempt to card scaling. Right now it is just using a dead simple algorithm: Ratio = card.value / total card values; Width and Height of card is scaled proportion to that Ratio. Need to get *much* more sophisticated that this. But in the mean time, it simple :-)

--- a/tests/html/VisualBenefitsTests.html
+++ b/tests/html/VisualBenefitsTests.html
@@ -5,9 +5,13 @@
 
   <script src="../../war/lib/jquery-1.5.2.js"></script>
   <script src="../../war/js/VisualBenefits.js"></script>  
+  <script src="../../war/js/CardRepository.js"></script>  
+  <script src="../../war/js/CardScaler.js"></script>
   
   <script type="text/javascript" src="../lib/qunit/qunit.js"></script>
   <script type="text/javascript" src="../js/VisualBenefitsTests.js"></script>  
+  <script type="text/javascript" src="../js/CardRepositoryTests.js"></script>  
+  <script type="text/javascript" src="../js/ScalingTests.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit example</h1>
