make Card Repository less global.

--- a/tests/html/VisualBenefitsTests.html
+++ b/tests/html/VisualBenefitsTests.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="../lib/qunit/qunit.css" type="text/css" media="screen" />
 
   <script src="../../war/lib/jquery-1.5.2.js"></script>
+  <!-- <script src="../../war/js/main.js"></script> -->
   <script src="../../war/js/VisualBenefits.js"></script>  
   <script src="../../war/js/CardRepository.js"></script>  
   <script src="../../war/js/CardScaler.js"></script>
