--- a/war/index.html
+++ b/war/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="css/VisualBenefits.css" />
     <script src="lib/jquery-1.5.2.js"></script>
     <script type="text/javascript" src="js/VisualBenefits.js"></script>
+    <script type="text/javascript" src="js/CardRepository.js"></script>
+    <script type="text/javascript" src="js/CardScaler.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
     <section>
@@ -21,6 +24,10 @@
     <section>
       <div class="fms-cardWall">
         <div class="fms-card" />
+      </div>
+    </section>
+    <section>
+      <div class="fms-statusBar">
       </div>
     </section>
   </body>
