--- a/war/index.html
+++ b/war/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <title>Visualising Benefits</title>
     <link rel="stylesheet" type="text/css" href="css/VisualBenefits.css" />
     <script src="lib/jquery-1.5.2.js"></script>
