Playing with Masonry layout manager.

--- a/war/index.html
+++ b/war/index.html
@@ -6,6 +6,7 @@
     <title>Visualising Benefits</title>
     <link rel="stylesheet" type="text/css" href="css/VisualBenefits.css" />
     <script src="lib/jquery-1.5.2.js"></script>
+    <script src="lib/jquery.masonry.js"></script>
     <script type="text/javascript" src="js/VisualBenefits.js"></script>
     <script type="text/javascript" src="js/CardRepository.js"></script>
     <script type="text/javascript" src="js/CardScaler.js"></script>
