Fixed test to also source in the new jquery.validate.js file.

--- a/tests/html/VisualBenefitsTests.html
+++ b/tests/html/VisualBenefitsTests.html
@@ -5,6 +5,7 @@
 
   <script src="../../war/lib/jquery-1.5.2.js"></script>
   <script src="../../war/lib/jquery.masonry.js"></script>
+  <script src="../../war/lib/jquery.validate.js"></script>
   <!-- <script src="../../war/js/main.js"></script> -->
   <script src="../../war/js/VisualBenefits.js"></script>  
   <script src="../../war/js/CardRepository.js"></script>  
